--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Build with Angular.js
         run: ${{ steps.detect-package-manager.outputs.runner }} build:prod
 
+      - name: Copy index.html to 404.html
+        run: cp ./dist/itajuba/browser/index.html ./dist/itajuba/browser/404.html
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
