Ajustando o layout para carregamento fluido

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,19 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "campeonato-planilha",
+      "urls": [
+        "https://docs.google.com/spreadsheets/d/1xWApRoSOWaw_mPWIFiSI4jPp26xOpOIeDzfmxD-igA8/.*"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 5,
+        "maxAge": "1h",
+        "timeout": "10s"
+      }
+    }
   ]
 }
