--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -7,10 +7,10 @@
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/favicon.ico",
-          "/index.csr.html",
           "/index.html",
-          "/manifest.webmanifest",
+          "/index.csr.html",
+          "/assets/manifest.webmanifest",
+          "/assets/icons/favicon.ico",
           "/*.css",
           "/*.js"
         ]
@@ -22,7 +22,8 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/assets/icons/*.(svg|png|jpg|webp)",
+          "/assets/screenshots/*.(jpg|png)"
         ]
       }
     }
